--- a/vertx-integration-test-maven-plugin/src/main/resources/templates/report-html.hbs
+++ b/vertx-integration-test-maven-plugin/src/main/resources/templates/report-html.hbs
@@ -8,6 +8,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+    <style type="text/css">
+        .test-FAILURE {
+            color: #8A6D3B;
+        }
+
+        .test-ERROR {
+            color: #A94442;
+        }
+
+        .test-SUCCESS {
+            color: #3C763D;
+        }
+    </style>
 </head>
 <body>
 
@@ -43,7 +56,7 @@
 {{#executions}}
     <tr class="">
         <td>{{fullName}}</td>
-        <td>{{status}}</td>
+        <td class="test-{{status}}">{{status}}</td>
         <td><a href="{{reportName}}.html">Report</a></td>
     </tr>
 {{/executions}}
