Fix junit reports:
* elapsed time must be in seconds
* fix failure inclusion
* fix failure and error count

--- a/vertx-integration-test-maven-plugin/src/main/resources/templates/junit-report.hbs
+++ b/vertx-integration-test-maven-plugin/src/main/resources/templates/junit-report.hbs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="{{fullName}}" time="{{time}}" tests="1" errors="{{errorAsInt}}"
+<testsuite name="{{fullName}}" time="{{elapsedTimeAsString}}" tests="1" errors="{{errorAsInt}}"
            skipped="0"
            failures="{{failureAsInt}}">
     <properties>
