Fix junit report template.

--- a/vertx-integration-test-maven-plugin/src/main/resources/templates/junit-report.hbs
+++ b/vertx-integration-test-maven-plugin/src/main/resources/templates/junit-report.hbs
@@ -4,11 +4,11 @@
            failures="{{failureAsInt}}">
     <properties>
     </properties>
-    <testcase name="{{fullName}}" classname="{{fullName}}" time="{{time}}">
-        {{#hasFailed}}
+    <testcase name="{{fullName}}" classname="{{fullName}}" time="{{elapsedTimeAsString}}">
+        {{#if hasFailed}}
         <failure type="java.lang.AssertionError:">
             {{exception}}
         </failure>
-        {{/hasFailed}}
+        {{/if}}
     </testcase>
 </testsuite>
