Another junit report fix. Mustache does not called hasFailed method, need to be getFailed and retrieved as failed.

--- a/vertx-integration-test-maven-plugin/src/main/resources/templates/junit-report.hbs
+++ b/vertx-integration-test-maven-plugin/src/main/resources/templates/junit-report.hbs
@@ -5,7 +5,7 @@
     <properties>
     </properties>
     <testcase name="{{fullName}}" classname="{{fullName}}" time="{{elapsedTimeAsString}}">
-        {{#if hasFailed}}
+        {{#if failed}}
         <failure type="java.lang.AssertionError:">
             {{exception}}
         </failure>
