Add environment customization support
Useful to pass VERTX_OPTS.

--- a/vertx-integration-test-maven-plugin/src/main/resources/templates/execution-html.hbs
+++ b/vertx-integration-test-maven-plugin/src/main/resources/templates/execution-html.hbs
@@ -29,6 +29,7 @@
 <li> Run total time: {{totalExecutionTime}} ms</li>
 <li> Command: {{command}}</li>
 {{#if clientCommand}}<li> Client Command: {{clientCommand}}</li>{{/if}}
+{{#if environment}}<li> Environment: {{environment}}</li>{{/if}}
 </ul>
 
 <h3>Error and Failures</h3>
