--- a/vertx-integration-test-maven-plugin/src/main/resources/templates/execution.hbs
+++ b/vertx-integration-test-maven-plugin/src/main/resources/templates/execution.hbs
@@ -14,6 +14,7 @@
 * Run total time: {{totalExecutionTime}} ms
 * Command: {{command}}
 {{#if clientCommand}}* Client Command: {{clientCommand}}{{/if}}
+{{#if environment}}* Environment: {{environment}}{{/if}}
 
 ### Error and Failures
 
